--- a/src/main/resources/static/back/latest_news.html
+++ b/src/main/resources/static/back/latest_news.html
@@ -489,7 +489,7 @@
                 >
                   <thead>
                     <tr class="text-dark">
-                      <th scope="col">編號</th>
+                      <th scope="col" hidden>編號</th>
                       <th scope="col">輪播標題</th>
                       <th scope="col">輪播文字</th>
                       <th scope="col">狀態</th>
@@ -808,7 +808,7 @@
               const url = carousel.shopCarouselUrl;
               // console.log(url);
 
-              const newStarTime = moment(startTime, "M月 DD, YYYY").format(
+              const newStarTime = moment(startTime, "M月 DDYYYY/MM/DD").format(
                 "YYYY-MM-DD"
               );
               const newEndTime = moment(endTime, "M月 DD, YYYY").format(
@@ -819,12 +819,12 @@
               const trElement = document.createElement("tr");
 
               trElement.innerHTML = `
-                    <td>${no}</td>
+                    <td hidden>${no}</td>
                     <td>${title}</td>
                     <td><img src="/Jamigo/DBPicReader?shopCarouselNo=${no}" style="max-width: 250px; max-height: 150px;"></td>
                     <td>${states}</td>
-                    <td>${startTime}</td>
-                    <td>${endTime}</td>
+                    <td>${newStarTime}</td>
+                    <td>${newEndTime}</td>
                     <td>
                       <button
                           type="button"
@@ -1014,57 +1014,75 @@
         const file = fileInput.files[0];
         // console.log(file);
 
-        // 將圖片轉換為 Base64
-        const base64Image = await convertImageToBase64(file);
-        // console.log(base64Image);
+        let base64Image = ""; // 預設為空字串
 
-        // 建立 JSON 物件
-        const data = {
-          shopCarouselTitle: title,
-          shopCarouselText: text,
-          shopCarouselStartTime: startTime,
-          shopCarouselEndTime: endTime,
-          shopCarouselPic: base64Image,
-          shopCarouselUrl: url,
-          shopCarouselState: state,
-        };
-        // console.log(data);
+        if (file) {
+          // 如果有選擇圖片，才進行轉123
+          base64Image = await convertImageToBase64(file);
+        }
 
-        // 發送 POST 請求
-        fetch("/Jamigo/ShopCarouselServlet", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            "X-Data-Type": "json1",
-          },
-          body: JSON.stringify(data),
-        })
-          .then((response) => response.json())
-          .then((responseData) => {
-            Swal.fire("新增完成", "你很棒唉!", "success")
-              .then(() => {
-                // 清空表單
-                document.getElementById("recipient-title").value = "";
-                document.getElementById("recipient-text").value = "";
-                document.getElementById("recipient-statTime").value = "";
-                document.getElementById("recipient-endTime").value = "";
-                document.getElementById("formFile").value = "";
-                document.getElementById("recipient-url").value = "";
-              })
-              .then(() => {
-                location.reload();
-              });
-          })
-          .catch((error) => {
-            // 處理錯誤
-            console.error("Error:", error);
+        if (
+          !title ||
+          !text ||
+          !startTime ||
+          !endTime ||
+          !url ||
+          !state ||
+          !base64Image
+        ) {
+          Swal.fire({
+            icon: "error",
+            title: "請完整寫所有欄位資料",
           });
+        } else {
+          // 建立 JSON 物件
+          const data = {
+            shopCarouselTitle: title,
+            shopCarouselText: text,
+            shopCarouselStartTime: startTime,
+            shopCarouselEndTime: endTime,
+            shopCarouselPic: base64Image,
+            shopCarouselUrl: url,
+            shopCarouselState: state,
+          };
+          // console.log(data);
 
-        // 確認後燈箱隱藏
-        var modal = bootstrap.Modal.getInstance(
-          document.getElementById("exampleModal")
-        );
-        modal.hide();
+          // 發送 POST 請求
+          fetch("/Jamigo/ShopCarouselServlet", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+              "X-Data-Type": "json1",
+            },
+            body: JSON.stringify(data),
+          })
+            .then((response) => response.json())
+            .then((responseData) => {
+              Swal.fire("新增完成", "你很棒唉!", "success")
+                .then(() => {
+                  // 清空表單
+                  document.getElementById("recipient-title").value = "";
+                  document.getElementById("recipient-text").value = "";
+                  document.getElementById("recipient-statTime").value = "";
+                  document.getElementById("recipient-endTime").value = "";
+                  document.getElementById("formFile").value = "";
+                  document.getElementById("recipient-url").value = "";
+                })
+                .then(() => {
+                  location.reload();
+                });
+            })
+            .catch((error) => {
+              // 處理錯誤
+              console.error("Error:", error);
+            });
+
+          // 確認後燈箱隱藏
+          var modal = bootstrap.Modal.getInstance(
+            document.getElementById("exampleModal")
+          );
+          modal.hide();
+        }
       }
     </script>
 
