--- a/src/main/resources/static/index/promotion_list/promotionP_detail.html
+++ b/src/main/resources/static/index/promotion_list/promotionP_detail.html
@@ -352,6 +352,12 @@
                             class="float-right"
                           ></span>
                         </li>
+                        <button
+                          type="button"
+                          class="btn btn-primary d-grid gap-2 col-6 mt-3 mx-auto"
+                        >
+                          立即前往購物
+                        </button>
                       </ul>
                     </section>
                   </aside>
